--- a/templates/home.html
+++ b/templates/home.html
@@ -27,7 +27,7 @@
             <!-- Content -->
             <div class="text-center white-text mx-5 wow fadeIn">
               <h1 class="mb-4">
-                <strong>MERCADITO KICKBOXING</strong>
+                <strong>PERICO TEAM</strong>
               </h1>
 
               <p>
