--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
     <a class="navbar-brand waves-effect" href="{% url 'core:home' %}">
       <img src="{% static 'img/logo.jpg' %}" height="40" class="d-inline-block align-top mr-2 rounded-circle"
         alt="Logo">
-      <strong class="blue-text">Mercadito Kickboxing</strong>
+      <strong class="blue-text">Perico Team</strong>
     </a>
 
     <!-- Collapse -->
